# VectorForge

./: .env.example  .gitignore  BUSINESS_PLAN.md  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  start.bat
.claude/: settings.json
.claude/agents/: api-tester.md  backend-dev.md  billing-setup.md  code-reviewer.md  db-migrate.md  deployer.md  frontend-dev.md
.claude/skills/: add-component.md  add-endpoint.md  db-reset.md  deploy.md  solve.md  start-dev.md  test-backend.md  test-e2e.md  test-frontend.md  (+1 more)
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_multi_output_fields.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  billing.py  conversions.py  router.py  share.py  webhooks.py
backend/app/core/: dependencies.py  exceptions.py  security.py
backend/app/models/: __init__.py  api_key.py  conversion.py  user.py  webhook.py
backend/app/schemas/: auth.py  billing.py  conversion.py  webhook.py
backend/app/services/: billing.py  cache.py  centerline.py  converter.py  export_formats.py  generate_viewer.py  path_smoother.py  potrace_hybrid.py  preprocessing.py  queue.py  share.py  storage.py  svg_color_grouper.py  svg_optimizer.py  vectorize_cnc.py  webhook_sender.py
backend/app/workers/: conversion_worker.py
backend/tests/: conftest.py  test_auth.py  test_conversions.py  test_conversions_full.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
(+37 files in other folders)
